@@ -1,3 +1,7 @@
+Sun Mar  4 10:39:14 GMT 2007  Colin Watson  <cjwatson@debian.org>
+
+	* libdb/db_store.c (dbstore): Rename basename to base.
+
 Sun Mar  4 00:51:30 GMT 2007  Colin Watson  <cjwatson@debian.org>
 
 	Eliminate variable and function shadowing.
